--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "bootstrap": "^4.6.0",
     "email-validator": "^2.0.4",
+    "express": "^4.18.2",
     "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
