--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,8 +18,10 @@
     "react-dom": "^18.2.0",
     "react-fakers": "^1.0.3-rc1",
     "react-icons": "^4.8.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.36.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
